RHD-726 - Fixed the spacing issue and changed the hand to the default pointer

--- a/stylesheets/_global-wrapper.scss
+++ b/stylesheets/_global-wrapper.scss
@@ -122,6 +122,7 @@ footer.bottom {
     &.copyright {
       color: #646464;
       width: 240px;
+      cursor: default;
     }
     &.summit-logo {
       margin-right: 20px;
